# AoC

./: .gitignore  LICENSE  README.md  aoc.py  bun.lockb  environment.yaml  package.json  pyproject.toml  tsconfig.json
2022/python/: template.py
2022/python/day1/: part1.py  part2.py
2022/python/day10/: part1.py  part2.py
2022/python/day11/: part1.py  part2.py
2022/python/day12/: part1.py
2022/python/day2/: part1.py  part2.py
2022/python/day3/: part1.py  part2.py
2022/python/day4/: part1.py  part2.py
2022/python/day5/: part1.py  part2.py
2022/python/day6/: part1.py  part2.py
2022/python/day7/: part1.py  part2.py
2022/python/day8/: part1.py  part2.py
2022/python/day9/: part1.py  part2.py
2023/: template.py
2023/python/day1/: part1.py  part2.py
2023/python/day10/: part1.py  part2.py
2023/python/day11/: part1.py  part2.py
2023/python/day12/: part1.py
2023/python/day13/: part1.py  part2.py
2023/python/day2/: part1.py  part2.py
2023/python/day3/: part1.py  part2.py
2023/python/day4/: part1.py  part2.py
2023/python/day5/: part1.py  part2.py
2023/python/day6/: part1.py  part2.py
2023/python/day7/: part1.py  part2.py
2023/python/day8/: part1.py  part2.py
2023/python/day9/: part1.py  part2.py
2024/javascript/day1/: part1.ts  part2.ts
2024/python/: template.py
2024/python/day1/: part1.py  part2.py
2024/python/day2/: part1.py  part2.py
2024/python/day3/: part1.py  part2.py
2024/python/day4/: part1.py  part2.py
2024/python/day5/: part1.py  part2.py
2024/python/day6/: part1.py  part2.py
aoc/: __init__.py  utils.js
(+31 files in other folders)
