[project]
name = "aoc"
version = "2024.1.0"
description = "Advent of Code solution by Atlanswer"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [ "ipykernel>=6.30", "ipython>=9.6", "rich>=14.1" ]
