[project]
name = "aoc"
version = "2025.0.0"
description = "Advent of Code solution by Atlanswer"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "ipykernel>=7.1", "ipython>=9.7", "rich>=14.2" ]

[dependency-groups]
dev = [
    "ty>=0.0.1a28",
]
