[build-system]
build-backend = "flit_core.buildapi"
requires = [ "flit-core>=3.2,<4" ]

[project]
name = "aoc"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "description", "version" ]
dependencies = [ "ipykernel>=7.1", "ipython>=9.7", "rich>=14.2" ]
urls.Home = "https://github.com/atlanswer/AoC"

[dependency-groups]
dev = [ "flit>=3.12", "ty>=0.0.1a29" ]
